add refresh token and feature, has a alert for jwt token has expired
